tests/ui/duplicate-method-attributes.stderr
error: duplicate #[async_trait] in method
 --> tests/ui/duplicate-method-attributes.rs:6:5
  |
6 |     #[async_trait(?Send)]
  |     ^^^^^^^^^^^^^^^^^^^^^
